17/09/10 Julien Dutheil
* Initial draft of bpp-core from old bpp-utils and bpp-numcalc.
