@@ -1,3 +1,7 @@
+27/10/10 Julien Dutheil
+* Added unit testing
+* [0000003] Fixed downhill simplex method! Did not work when initial point was 0!
+
 17/09/10 Julien Dutheil
 * Initial draft of bpp-core from old bpp-utils and bpp-numcalc.
 
